/*
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *   http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing,
 * software distributed under the License is distributed on an
 * "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
 * KIND, either express or implied.  See the License for the
 * specific language governing permissions and limitations
 * under the License.
 *
 */

syntax = "proto3";
package teaclave_storage_service_proto;

import "google/protobuf/empty.proto";

message GetRequest {
  bytes key = 1;
}

message GetResponse {
  bytes value = 1;
}

message PutRequest {
  bytes key = 1;
  bytes value = 2;
}

message DeleteRequest {
  bytes key = 1;
}

message EnqueueRequest {
  bytes key = 1;
  bytes value = 2;
}

message DequeueRequest {
  bytes key = 1;
}

message DequeueResponse {
  bytes value = 1;
}

message GetKeysByPrefixRequest {
  bytes prefix = 1;
}

message GetKeysByPrefixResponse {
  repeated bytes keys = 1;
}

service TeaclaveStorage {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Put(PutRequest) returns (google.protobuf.Empty);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc Enqueue(EnqueueRequest) returns (google.protobuf.Empty);
  rpc Dequeue(DequeueRequest) returns (DequeueResponse);
  rpc GetKeysByPrefix(GetKeysByPrefixRequest) returns (GetKeysByPrefixResponse);
}
